footer spacing fix

--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -5,7 +5,7 @@
 
 .Rectangle {
   width: 100vw;
-  height: 110px;
+  height: 10px;
   background-color: #ffffff;
 }
 
@@ -27,22 +27,22 @@
   font-weight: 300;
 }
 .footer {
-  padding-top: 0px;
-  margin-top: -80px;
-  height: 100%;
+  padding-top: 10px;
+  margin-top: -20px;
+  max-height: 80px;
   text-align: center;
   background-color: #ffffff;
   width: 100vw;
   color: #858585;
   letter-spacing: 0.1px;
   font-style: normal;
-  font-size: 20px;
+  font-size: 14px;
   font-family: FuturaBT;
   font-weight: normal;
   line-height: normal;
 }
 
 .footer img {
-  padding-right: 12px;
-  height: 15%;
+  padding-right: 10px;
+  height: 20px;
 }
